Updates the package to use CommonJS and Browserify for the build
This makes the package a proper citizen on the NPM infrastructure while maintaining `xregexp-all.js` compatibility.

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,14 +11,7 @@
     <script src="vendor/jasmine/boot.js"></script>
 
     <!-- XRegExp -->
-    <script src="../src/xregexp.js"></script>
-    <script src="../src/addons/build.js"></script>
-    <script src="../src/addons/matchrecursive.js"></script>
-    <script src="../src/addons/unicode-base.js"></script>
-    <script src="../src/addons/unicode-blocks.js"></script>
-    <script src="../src/addons/unicode-categories.js"></script>
-    <script src="../src/addons/unicode-properties.js"></script>
-    <script src="../src/addons/unicode-scripts.js"></script>
+    <script src="../xregexp-all.js"></script>
 
     <!-- Helpers -->
     <script src="helpers/h.js"></script>
