--- a/tests/perf/index.html
+++ b/tests/perf/index.html
@@ -45,6 +45,8 @@
         }());
     </script>
 
+    <script src="../vendor/benchmark.js/lodash.js"></script>
+    <script src="../vendor/benchmark.js/platform.js"></script>
     <script src="../vendor/benchmark.js/benchmark.js"></script>
     <script src="perf.js"></script>
 
