--- a/tests/perf/index.html
+++ b/tests/perf/index.html
@@ -24,6 +24,7 @@
             var match = /[?&]version=([^&]+)/.exec(location.search);
             var version = match ? match[1] : null;
             var knownVersion = {
+                '3.2.0': true,
                 '3.1.1': true,
                 '3.1.0': true,
                 '3.0.0': true,
