--- a/tests/index.html
+++ b/tests/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XRegExp Specs</title>
 
     <!-- Jasmine -->
-    <link rel="stylesheet" href="vendor/jasmine/jasmine.css">
-    <script src="vendor/jasmine/jasmine.js"></script>
-    <script src="vendor/jasmine/jasmine-html.js"></script>
-    <script src="vendor/jasmine/boot.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jasmine/jasmine@5.1.2/lib/jasmine-core/jasmine.css">
+    <script src="https://cdn.jsdelivr.net/gh/jasmine/jasmine@5.1.2/lib/jasmine-core/jasmine.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jasmine/jasmine@5.1.2/lib/jasmine-core/jasmine-html.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jasmine/jasmine@5.1.2/lib/jasmine-core/boot0.js"></script>
+    <script>
+        jasmine.getEnv().configure({random: false});
+    </script>
+    <script src="https://cdn.jsdelivr.net/gh/jasmine/jasmine@5.1.2/lib/jasmine-core/boot1.js"></script>
 
     <!-- XRegExp -->
     <script src="../xregexp-all.js"></script>
